--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -195,7 +195,7 @@ labelfont={bf}
 
 \renewcommand{\abstractname}{\vspace{-\baselineskip}} % GET RID OF ABSTRACT TITLE
 \begin{abstract}\noindent 
-	\footnotesize{\begin{center}\textbf{Abstract}\end{center} This paper investigates the impact of football games on physical violence. I employ a generalized difference-in-differences strategy that exploits time series and cross-sectional variation in crime register data for the period 2011-2015. I compare the level of assaults on days with and without matches while controlling for date heterogeneity, weather, and holidays. I find that a home game leads to an increase of the assault rate by 21.5 percent. The effects are largely driven by male victims, who do not know the perpetrator, and are decreasing with age.
+	\footnotesize{\begin{center}\textbf{Abstract}\end{center} This paper investigates the impact of football games on physical violence. I employ a generalized difference-in-differences strategy that exploits time-series and cross-sectional variation in crime register data for the period 2011-2015. I compare the level of assaults on days with and without matches while controlling for date heterogeneity, weather, and holidays. I find that a home game leads to an increase of the assault rate by 21.5 percent. The effects are largely driven by male victims, who do not know the perpetrator, and are decreasing with age.
 	\\\newline \textbf{Keywords:} soccer games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
 
 \end{abstract}
@@ -221,7 +221,7 @@ labelfont={bf}
 
 
 % STRATEGY & DATA
-The aim of this paper is to undertake an in-depth examination of the effects that public mass gatherings exert on criminal behavior. More specifically, the impact of soccer games in the framework of the German professional football league system is investigated. To get at the impact of soccer matches on violent behavior, I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time series and cross-sectional variation, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web-scraping.\footnote{This includes, but is by far not limited to the time and location of games.} Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
+The aim of this paper is to undertake an in-depth examination of the effects that public mass gatherings exert on criminal behavior. More specifically, the impact of soccer games in the framework of the German professional football league system is investigated. To get at the impact of soccer matches on violent behavior, I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time-series and cross-sectional variation, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web-scraping.\footnote{This includes, but is by far not limited to the time and location of games.} Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
 
 
 
@@ -305,7 +305,7 @@ Alcohol plays a crucial role in the context of spectator violence in German foot
 \bigskip
 \section{Empirical strategy}\label{sec_soc_ext:empirical_strategy}
 
-In order to identify the causal effect of soccer matches on criminal behavior, I exploit time series and cross-sectional variation. To be precise, I compare the regional assault rate on the game day to the expected assault level conditional on the day of the week, month, and year while additionally accounting for other possible confounding variation stemming from weather and holidays. In other words, the counterfactual assault rate (what would be expected on a game day in absence of the game), e.g. a Saturday in April 2012, is obtained by using the assault rate on other Saturdays in April 2012, where no games take place. %In other words, the regional assault rate on a given date without a game (say a Saturday in April 2012) serves as counterfactual for what would be expected on a game day (on a Saturday in April 2012) in absence of the game. 
+In order to identify the causal effect of soccer matches on criminal behavior, I exploit time-series and cross-sectional variation. To be precise, I compare the regional assault rate on the game day to the expected assault level conditional on the day of the week, month, and year while additionally accounting for other possible confounding variation stemming from weather and holidays. In other words, the counterfactual assault rate (what would be expected on a game day in absence of the game), e.g. a Saturday in April 2012, is obtained by using the assault rate on other Saturdays in April 2012, where no games take place. %In other words, the regional assault rate on a given date without a game (say a Saturday in April 2012) serves as counterfactual for what would be expected on a game day (on a Saturday in April 2012) in absence of the game. 
 
 
 The identification strategy is based on a generalized difference-in-differences approach to study the impact of a soccer match on violent behavior. Let Assaults$_{rdmy}$ denote the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$. The assault rate is defined as the number of assaults per million population and is given by:
@@ -315,15 +315,15 @@ The identification strategy is based on a generalized difference-in-differences 
 	\label{eq_soc_ext:model}.
 \end{align}
 
-$\text{Gameday}_{rdmy}$ is a binary variable equal to unity when a home games takes place and zero otherwise. Region fixed effects $\vartheta_r$ capture time-invariant differences between regions and ensure that the identification is driven by within instead of between region variation over time. The vector $\text{date}_{dmy}$ contains fixed effects for day-of-the-week ($\gamma_d$), month ($\eta_m$), and year ($\theta_y$). This way, the model flexibly controls for day-of-week specific heterogeneity, seasonal effects and long-run time trends. I expand on the baseline model by adding interactions of region fixed effects with all elements of $\text{date}_{dmy}$, i.e. region-by-day-of-week fixed effects, region-by-month fixed effects, and region-by-year fixed effects. The interactions account for systemic changes in the degree of violent behavior over the year for each region. The vector $\mathbf{X}_{rdmy}$ includes school and public holidays and weather controls.\footnote{Holiday controls include binary variables (on the level of the Federal States) for All Saints, Ascension Day, Assumption Day, Christmas, Corpus Christi, Epiphany, Easter, German Unity Day, Good Friday, Labor Day, New Year, Penance Day, Pentecost, and Reformation Day. Moreover, it contains dummy variables for carnival season and New Year's Eve.\newline Weather controls (on the regional level) include average air temperature, maximum air temperature, minimum air temperature, minimum ground temperature, steam pressure, cloud cover, air pressure, humidity, average precipitation, sunshine duration, snow depth, and wind speed.} I compute two-way cluster-robust standard errors to capture arbitrary correlation at the region-year and year-month levels. Observations are weighted using population figures from the Federal Statistical Office.
+$\text{Gameday}_{rdmy}$ is a binary variable equal to unity when a home game takes place and zero otherwise. Region fixed effects $\vartheta_r$ capture time-invariant differences between regions and ensure that the identification is driven by within instead of between region variation over time. The vector $\text{date}_{dmy}$ contains fixed effects for day-of-the-week ($\gamma_d$), month ($\eta_m$), and year ($\theta_y$). This way, the model flexibly controls for day-of-week specific heterogeneity, seasonal effects, and long-run time trends. I expand on the baseline model by adding interactions of region fixed effects with all elements of $\text{date}_{dmy}$, i.e. region-by-day-of-week fixed effects, region-by-month fixed effects, and region-by-year fixed effects. The interactions account for systemic changes in the degree of violent behavior over the year for each region. The vector $\mathbf{X}_{rdmy}$ includes school and public holidays and weather controls.\footnote{Holiday controls include binary variables (on the level of the Federal States) for All Saints, Ascension Day, Assumption Day, Christmas, Corpus Christi, Epiphany, Easter, German Unity Day, Good Friday, Labor Day, New Year, Penance Day, Pentecost, and Reformation Day. Moreover, it contains dummy variables for carnival season and New Year's Eve.\newline Weather controls (on the regional level) include average air temperature, maximum air temperature, minimum air temperature, minimum ground temperature, steam pressure, cloud cover, air pressure, humidity, average precipitation, sunshine duration, snow depth, and wind speed.} I compute two-way cluster-robust standard errors to capture arbitrary correlation at the region-year and year-month levels. Observations are weighted using population figures from the Federal Statistical Office.
 
 
 % displacement effects - temporal & spatial
-The implicit assumption to interpret the parameter of interest $\beta$ as the causal effect of a home game on violent behavior, is that the location and the time of a soccer match is orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) populations come from distant regions to the game. On the other hand, this includes temporal displacement effects, which happen when assaults from neighboring days are shifted to the game day. In both cases, the parameter would overestimate the impact of a soccer match on violent behavior as the offense would would have been committed anyway, but just another time or at another place. To rule out the possibility that displacement effects pose a threat to the validity of the identification strategy, I investigate the effect of soccer games on neighboring regions and on days surrounding game days. I find that the main results, an increase in violent behavior due to soccer games, are not neutralized by decreases in adjacent regions or on days surrounding game days.
+The implicit assumption to interpret the parameter of interest $\beta$ as the causal effect of a home game on violent behavior is that the location and the time of a soccer match are orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) populations come from distant regions to the game. On the other hand, this includes temporal displacement effects, which happen when assaults from neighboring days are shifted to the game day. In both cases, the parameter would overestimate the impact of a soccer match on violent behavior as the offense would have been committed anyway, but just another time or at another place. To rule out the possibility that displacement effects pose a threat to the validity of the identification strategy, I investigate the effect of soccer games on neighboring regions and on days surrounding game days. I find that the main results, an increase in violent behavior due to soccer games, are not neutralized by decreases in adjacent regions or on days surrounding game days.
 
 
 % control group problem - away games
-Given the setup of the empirical approach, there could be another threat to the validity of the identification strategy. By focusing on home games in the main analysis, the counterfactuals could potentially be biased downwards as days with away games are part of the control group. This control group problem might stem from the fact that violent fan groups travel with their team on away games and the assault rate in the home region might consequently decline. In order to alleviate this concern, I redo the analysis and differentiate between home and away games. When allowing for distinct effects for home and away games, I find that the effect of away games do not significantly affect the assault rate. 
+Given the setup of the empirical approach, there could be another threat to the validity of the identification strategy. By focusing on home games in the main analysis, the counterfactuals could potentially be biased downwards as days with away games are part of the control group. This control group problem might stem from the fact that violent fan groups travel with their team on away games and the assault rate in the home region might consequently decline. In order to alleviate this concern, I redo the analysis and differentiate between home and away games. When allowing for distinct effects for home and away games, I find that the effect of away games does not significantly affect the assault rate. 
 
 
 
