tables: replace "yes" w/  \checkmark

--- a/analysis/output/tables/reg_fe/assrate_fixed_effects.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects.tex
@@ -2,8 +2,8 @@ Game day            &       2.740\sym{***}&       2.766\sym{***}&       2.813\sy
                     &     (0.319)         &     (0.312)         &     (0.313)         &     (0.284)         \\
 \midrule Effect size [\%]&       22.00         &       22.21         &       22.59         &       21.50         \\
 Observations        &      88,028         &      88,028         &      88,028         &      88,028         \\
-Region FE           &         yes         &         yes         &         yes         &         yes         \\
-Date Fe             &         yes         &         yes         &         yes         &         yes         \\
-Weather Controls    &           -         &         yes         &         yes         &         yes         \\
-Holiday FE          &           -         &           -         &         yes         &         yes         \\
-Interact FE         &           -         &           -         &           -         &         yes         \\
+Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Weather Controls    &           -         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Holiday FE          &           -         &           -         &         \checkmark         &         \checkmark         \\
+Interact FE         &           -         &           -         &           -         &         \checkmark         \\
