--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_home_away.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_home_away.tex
@@ -6,8 +6,8 @@ Away game day       &                     &       0.325         \\
                     &                     &     (0.213)         \\
 \midrule Effect size [\%]&       21.22         &       21.97         \\
 Observations        &      61,172         &      61,172         \\
-Region FE           &         yes         &         yes         \\
-Date Fe             &         yes         &         yes         \\
-Weather Controls    &         yes         &         yes         \\
-Holiday FE          &         yes         &         yes         \\
-Interact FE         &         yes         &         yes         \\
+Region FE           &         \checkmark         &         \checkmark         \\
+Date Fe             &         \checkmark         &         \checkmark         \\
+Weather Controls    &         \checkmark         &         \checkmark         \\
+Holiday FE          &         \checkmark         &         \checkmark         \\
+Interact FE         &         \checkmark         &         \checkmark         \\
