--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_crime_chars.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_crime_chars.tex
@@ -2,8 +2,8 @@ Game day            &       2.677\sym{***}&       2.817\sym{***}&       1.482\sy
                     &     (0.284)         &     (0.404)         &     (0.484)         &     (0.372)         &     (0.535)         &     (0.060)         &     (0.238)         \\
 \midrule Effect size [\%]&       21.50         &       21.00         &       13.40         &       20.71         &       22.51         &       56.21         &       19.58         \\
 Observations        &      88,028         &      27,140         &      14,632         &      21,476         &      24,780         &      88,028         &      88,028         \\
-Region FE           &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Date Fe             &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Weather Controls    &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Holiday FE          &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Interact FE         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Weather Controls    &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Holiday FE          &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Interact FE         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
