--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_victim_chars.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_victim_chars.tex
@@ -2,8 +2,8 @@ Game day            &       2.677\sym{***}&       0.245\sym{***}&       2.432\sy
                     &     (0.284)         &     (0.090)         &     (0.232)         &     (0.207)         &     (0.116)         &     (0.045)         &     (0.078)         \\
 \midrule Effect size [\%]&       21.50         &        4.99         &       32.27         &       40.43         &        9.64         &        5.40         &       96.98         \\
 Observations        &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         \\
-Region FE           &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Date Fe             &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Weather Controls    &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Holiday FE          &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Interact FE         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Weather Controls    &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Holiday FE          &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Interact FE         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
