--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_displacement.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_displacement.tex
@@ -20,8 +20,8 @@ Day before game     &       0.287         &       0.318         &       0.339   
 Effect size [\%]&       22.34         &       22.60         &       22.98         &       22.28         \\
 Observations        &      87,438         &      87,438         &      87,438         &      87,438         \\
 \\\\
-Region FE           &         yes         &         yes         &         yes         &         yes         \\
-Date Fe             &         yes         &         yes         &         yes         &         yes         \\
-Weather Controls    &           -         &         yes         &         yes         &         yes         \\
-Holiday FE          &           -         &           -         &         yes         &         yes         \\
-Interact FE         &           -         &           -         &           -         &         yes         \\
+Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Weather Controls    &           -         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Holiday FE          &           -         &           -         &         \checkmark         &         \checkmark         \\
+Interact FE         &           -         &           -         &           -         &         \checkmark         \\
