--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_emotional_cues.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_emotional_cues.tex
@@ -15,8 +15,8 @@ Expected to be close and lost (upset loss)&                     &               
 Expected to win and lost (upset loss)&                     &                     &      -0.792         \\
                     &                     &                     &     (0.667)         \\
 \midrule Observations&      88,028         &      88,028         &      88,028         \\
-Region FE           &         yes         &         yes         &         yes         \\
-Date Fe             &         yes         &         yes         &         yes         \\
-Weather Controls    &         yes         &         yes         &         yes         \\
-Holiday FE          &         yes         &         yes         &         yes         \\
-Interact FE         &         yes         &         yes         &         yes         \\
+Region FE           &         \checkmark         &         \checkmark         &         \checkmark         \\
+Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         \\
+Weather Controls    &         \checkmark         &         \checkmark         &         \checkmark         \\
+Holiday FE          &         \checkmark         &         \checkmark         &         \checkmark         \\
+Interact FE         &         \checkmark         &         \checkmark         &         \checkmark         \\
